gobmkida/c3/do_owl_analyze_semeai
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:763:7: error: conflicting types for 'do_owl_analyze_semeai'
void  do_owl_analyze_semeai( 
      ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:194:13: note: previous declaration is here
static void do_owl_analyze_semeai(int apos, int bpos, 
            ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1143:63: error: too few arguments to function call, expected 8, have 7
owl_determine_life( v23, v24, 1, &does_attack, &dest, 0LL, 0LL); 
~~~~~~~~~~~~~~~~~~                                            ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:159:1: note: 'owl_determine_life' declared here
static void owl_determine_life(struct local_owl_data *owl,
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1153:72: error: too few arguments to function call, expected 8, have 7
owl_determine_life( second_owl, owl, 1, &callback_data, &v154, 0LL, 0LL); 
~~~~~~~~~~~~~~~~~~                                                     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:159:1: note: 'owl_determine_life' declared here
static void owl_determine_life(struct local_owl_data *owl,
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1393:8: error: use of undeclared identifier 'byte_9C689F'
if ( ( byte_9C689F[does_attack.pos] == 3 || !second_owl->goal[v46]) 
       ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1394:6: error: use of undeclared identifier 'byte_9C688C'
&& ( byte_9C688C[does_attack.pos] == 3 || !second_owl->goal[does_attack.pos - 20]) ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1424:4: error: use of undeclared identifier 'byte_9C688C'
|| byte_9C688C[does_attack.pos] != 3 && v45->goal[does_attack.pos - 20] 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1453:6: error: use of undeclared identifier 'byte_9C688C'
&& ( byte_9C688C[v209] == 3 || !v52->goal[v209 - 20]) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1463:6: error: use of undeclared identifier 'byte_9C689F'
if ( byte_9C689F[v209] != 3 && second_owl->goal[v53] 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1464:4: error: use of undeclared identifier 'byte_9C688C'
|| byte_9C688C[v209] != 3 && second_owl->goal[v209 - 20] 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1484:8: error: use of undeclared identifier 'byte_9C689F'
if ( ( byte_9C689F[callback_data.pos] == 3 || !second_owl->goal[v58]) 
       ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1485:6: error: use of undeclared identifier 'byte_9C688C'
&& ( byte_9C688C[callback_data.pos] == 3 || !second_owl->goal[callback_data.pos - 20]) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1503:4: error: use of undeclared identifier 'byte_9C688C'
|| byte_9C688C[callback_data.pos] != 3 && v57->goal[callback_data.pos - 20] 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1517:4: error: use of undeclared identifier 'byte_9C689F'
|| byte_9C689F[v59] != 3 && owl->goal[v59 - 1] 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1518:4: error: use of undeclared identifier 'byte_9C688C'
|| byte_9C688C[v59] != 3 && owl->goal[v59 - 20] 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1532:8: error: use of undeclared identifier 'byte_9C689F'
if ( ( byte_9C689F[v188] == 3 || !second_owl->goal[v65]) 
       ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1533:6: error: use of undeclared identifier 'byte_9C688C'
&& ( byte_9C688C[v188] == 3 || !second_owl->goal[v188 - 20]) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1540:4: error: use of undeclared identifier 'byte_9C689F'
|| byte_9C689F[v66] != 3 && owl->goal[v66 - 1] 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1541:4: error: use of undeclared identifier 'byte_9C688C'
|| byte_9C688C[v66] != 3 && owl->goal[v66 - 20] 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1569:6: error: use of undeclared identifier 'byte_9C688C'
&& ( byte_9C688C[v188] == 3 || !v63->goal[v188 - 20]) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1586:8: error: use of undeclared identifier 'byte_9C689F'
if ( ( byte_9C689F[v173.pos] == 3 || !second_owl->goal[v72]) 
       ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1587:6: error: use of undeclared identifier 'byte_9C688C'
&& ( byte_9C688C[v173.pos] == 3 || !second_owl->goal[v173.pos - 20]) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1605:4: error: use of undeclared identifier 'byte_9C688C'
|| byte_9C688C[v173.pos] != 3 && v71->goal[v173.pos - 20] 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1637:6: error: use of undeclared identifier 'byte_9C688C'
&& ( byte_9C688C[v174[0]] == 3 || !v76->goal[v174[0] - 20]) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1647:6: error: use of undeclared identifier 'byte_9C689F'
if ( byte_9C689F[v174[0]] != 3 && second_owl->goal[v77] 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1648:4: error: use of undeclared identifier 'byte_9C688C'
|| byte_9C688C[v174[0]] != 3 && second_owl->goal[v174[0] - 20] 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1668:8: error: use of undeclared identifier 'byte_9C689F'
if ( ( byte_9C689F[v180.pos] == 3 || !second_owl->goal[v82]) 
       ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1669:6: error: use of undeclared identifier 'byte_9C688C'
&& ( byte_9C688C[v180.pos] == 3 || !second_owl->goal[v180.pos - 20]) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1687:6: error: use of undeclared identifier 'byte_9C688C'
&& ( byte_9C688C[v180.pos] == 3 || !v81->goal[v180.pos - 20]) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1714:6: error: use of undeclared identifier 'byte_9C689F'
if ( byte_9C689F[v79] != 3 && v83->goal[v79 - 1] ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1716:6: error: use of undeclared identifier 'byte_9C688C'
if ( byte_9C688C[v79] != 3 && v83->goal[v79 - 20] ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1734:8: error: use of undeclared identifier 'byte_9C689F'
if ( ( byte_9C689F[v181[0]] == 3 || !second_owl->goal[v90]) 
       ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1735:6: error: use of undeclared identifier 'byte_9C688C'
&& ( byte_9C688C[v181[0]] == 3 || !second_owl->goal[v181[0] - 20]) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1769:8: error: use of undeclared identifier 'byte_9C689F'
if ( ( byte_9C689F[v87] == 3 || !v91->goal[v87 - 1]) && ( byte_9C688C[v87] == 3 || !v91->goal[v87 - 20]) ) 
       ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1769:59: error: use of undeclared identifier 'byte_9C688C'
if ( ( byte_9C689F[v87] == 3 || !v91->goal[v87 - 1]) && ( byte_9C688C[v87] == 3 || !v91->goal[v87 - 20]) ) 
                                                          ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/engine/owl.c:1780:6: error: use of undeclared identifier 'byte_9C688C'
&& ( byte_9C688C[v181[0]] == 3 || !v89->goal[v181[0] - 20]) 
     ^
35 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_owl_analyze_semeai/src/obj/1/owl.o] Error 1
